<resources>
    <string name="app_name">Gark</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="new_user_sign_up">New user ? Sign up</string>
    <string name="by_signing_up_you_indicate_that_you_read_and_agree_the_terms_of_service">By signing up you indicate that you read and agree the Terms of Service</string>
    <string name="password">password</string>
    <string name="email_adress">Email address</string>
    <string name="loading">Loading</string>
    <string name="no_story">There\'s no story to show !</string>
    <string name="location">location</string>
    <string name="_8_teams">8 teams</string>
    <string name="_16_teams">16 teams</string>
    <string name="number_of_teams">number of teams</string>
    <string name="prize">prize</string>
    <string name="proceed">Proceed</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="match_editing">Your match editing have been saved successfully !</string>
    <string name="specify_start_date">You didn\'t specify the start date for the match N°</string>
    <string name="challenge_added">Challenge added successfully !</string>
    <string name="validator_add_image_challenge">Please add an Image to the challenge !</string>
    <string name="validator_add_name_challenge">Please add your challenge name !</string>
    <string name="validator_add_description_challenge">Please add your description !</string>
    <string name="validator_add_prize_challenge">Please give a prize to your challlenge !</string>
    <string name="validator_add_location_challenge">Please set the challenge location !</string>
    <string name="validator_add_valid_prize_challenge">Please choose a valid value for prize !</string>
    <string name="validator_add_team_challenge">Please select the challenge capacity of teams !</string>
    <string name="file_size">File size too large !</string>
    <string name="select_image">Please select an image !</string>
    <string name="choose_image_from">Choose Image from</string>
    <string name="when_action_happend">Please specify when this action happened in the game !</string>
    <string name="valid_number_time">Please put a valid number in time field !</string>
    <string name="match_add">Match Action added successfully !</string>
    <string name="date_before_current">You can\'t give a match a date before current date !</string>
    <string name="set_match_today_validator">You can\'t set a match for today, add at least 24h from current time !</string>
    <string name="match_date_added">Match date added successfully !</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="term_an_privacy">Term and Privacy</string>
    <string name="help_center">Help Center</string>
    <string name="report_a_technical_problem">Report a technical problem</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password_reset">Password Reset</string>
    <string name="forget_password">Forgot Password</string>
    <string name="notifications">Notifications</string>
    <string name="none_yet">None Yet</string>
    <string name="set_global_match_information">Set Global Match Information</string>
    <string name="match_actions">Match Actions</string>
    <string name="winner">Winner</string>
    <string name="finish">Finish</string>
    <string name="finish_challenge">Finish Challenge</string>
    <string name="the_challenge_ended_congratulation_team">The challenge ended : Congratulation team</string>
    <string name="matchs">Matches</string>
    <string name="lineups">Lineups</string>
    <string name="set_game_actions">Set Game Actions</string>
    <string name="match_summary">Match Summary</string>
    <string name="quarter_final">Quarter-final</string>
    <string name="dark_on">Dark mode ON enjoy !</string>
    <string name="dark_off">Dark mode OFF enjoy !</string>
    <string name="validator_image_post">Please add an Image to the post !</string>
    <string name="validator_title_post">Please add your post title !</string>
    <string name="validator_description_post">Please add your description !</string>
    <string name="post_added">Post Added Successfully !</string>
    <string name="validator_image_team">Please put your team image !</string>
    <string name="validator_name_team">Your team doesn\'t have a name !</string>
    <string name="validator_description_team">Describe your team in a few word </string>
    <string name="add_team">Team Added Successfully !</string>
    <string name="teams"> teams</string>
    <string name="challenges"> challenges</string>
    <string name="validator_image_skills">Please put your image don\'t be shy</string>
    <string name="validator_hight_skills">Please put your height</string>
    <string name="validator_weight_skills">Please put your weight</string>
    <string name="validator_skills_height">Please choose a valid value for height !</string>
    <string name="validator_valid_weight_skills">Please choose a valid value for weight !</string>
    <string name="describe_yourself">Please describe yourself in a few words!</string>
    <string name="select_bestTeam_worldWide">Select your best team worldwide</string>
    <string name="select_bestTeam_tunisia">Select your best team in tunisia</string>
    <string name="select_bestPlayer_worldWide">Select your best player worldwide</string>
    <string name="select_bestPlayer_tunisia">Select your best player in tunisia</string>
    <string name="data_cleared">Data cleared successfully !</string>
    <string name="validator_email_empty">Email can\'t be empty</string>
    <string name="invalid_mail_password">Invalid Email or Password</string>
    <string name="welcome">Welcome !</string>
    <string name="workingOn">Working on, it will be available soon</string>
    <string name="scheduled">scheduled for</string>
    <string name="not_played_in_game">You didn\'t play in this game, you can\'t vote </string>
    <string name="no_teamMate">You can\'t vote on your own teammates</string>
    <string name="no_self">You can\'t vote on yourself</string>
    <string name="already_voted">You already voted on this player</string>
    <string name="loading_post">Loading Posts</string>
    <string name="defending">defending</string>
    <string name="shooting">shooting</string>
    <string name="passing">passing</string>
    <string name="dribbling">dribbling</string>
    <string name="physical">physical</string>
    <string name="pace">pace</string>
    <string name="years">"  years"</string>
    <string name="likes">" likes"</string>
    <string name="name">Name</string>
    <string name="home_town">Home Town</string>
    <string name="mobile">Mobile</string>
    <string name="become_field_owner">Become Field Owner</string>
    <string name="current_role">Current role : </string>
    <string name="member_since">Member since</string>
    <string name="image_updated_user">User Image Updated Successfully !</string>
    <string name="password_no_empty">Password can\'t be empty</string>
    <string name="password_8">Passwords must be at least 8 characters</string>
    <string name="password_confirm">Passwords do not match</string>
    <string name="wins"> wins</string>
    <string name="team_already_joined">This team already joined the challenge !</string>
    <string name="fn_no_empty">First name cannot be empty!</string>
    <string name="birth_day_validator">Select your birth date you can\'t be born today !</string>
    <string name="ln_no_empty">Last name cannot be empty!</string>
    <string name="no_fn">Invalid first name!</string>
    <string name="no_ln">Invalid last name!</string>
    <string name="email_invalid">Invalid email address!</string>
    <string name="invalid_location">Invalid home town!</string>
    <string name="invalid_phone">Invalid phone number!</string>
    <string name="registration_sucess">Registration succeeded please verify your mail !</string>
    <string name="score">score</string>
    <string name="loses">Loses</string>
    <string name="draws">Draws</string>
    <string name="dislike">You disliked this post</string>
    <string name="views">Views</string>
    <string name="team_already_favorite">Team Already added to your favorite</string>
    <string name="team_added_favorite">Team Added to your Favorite</string>
    <string name="joined_sucess">You have joined successfully</string>
    <string name="players"> players</string>
    <string name="game_must_finsh">The game must be finished, waiting for updates</string>
    <string name="vote_added">Your vote have been added successfully !</string>
    <string name="wrong_verification_code">Wrong verification code</string>
    <string name="challenge_edit">Your challenge editing have been saved successfully !</string>
    <string name="description">Description</string>
    <string name="add_matches">Add Matches</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="title">Title</string>
    <string name="add_post">Add Post</string>
    <string name="team_name">Team Name</string>
    <string name="add_team_members">Add Team Members</string>
    <string name="add_team_btn">Add Team</string>
    <string name="search">Search</string>
    <string name="invite">Invite</string>
    <string name="informations">informations</string>
    <string name="role">Role</string>
    <string name="nationality">Nationality</string>
    <string name="describe_yourself_field">Describe yourself</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="best_team_international">Best Team International</string>
    <string name="best_player_international">Best Player International</string>
    <string name="best_team_in_tunisia">Best Team In Tunisia</string>
    <string name="best_player_in_tunisia">Best Player In Tunisia</string>
    <string name="yalla">Yalla !</string>
    <string name="clear_all">Clear All</string>
    <string name="put_your_mail_here_if_your_account_exist_you_willl_recieve_a_verification_code">Put your mail here, if your account exist you will receive a verification code :</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="info">Info</string>
    <string name="stats">Stats</string>
    <string name="posts">Posts</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="your_teams">Your teams:</string>
    <string name="your_posts">Your Posts:</string>
    <string name="enter_your_new_password">Enter your new password:</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Logout</string>
    <string name="birth_date">Birth date</string>
    <string name="address_optional">Address (optional)</string>
    <string name="phone_optional">Phone (optional)</string>
    <string name="verify_code">Verify Code</string>
    <string name="select_the_team">Select the team</string>
    <string name="select_the_player">Select the player</string>
    <string name="select_the_action_type">Select the action type</string>
    <string name="when_this_action_happend_in_minutes">" When this action occurred (in minutes)"</string>
</resources>