<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".login.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    >
    <ImageView
        android:layout_marginTop="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_gravity="center"
        android:src="@drawable/gark_logo"/>
    <ImageView
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/gark_name"/>

<TextView
    android:layout_weight="5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:layout_gravity="center"
    android:layout_marginVertical="10dp"
    android:textSize="30sp"
    android:fontFamily="@font/arial_rounded"
    android:textColor="@color/black"/>
    <TextView
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:textSize="20sp"
        android:fontFamily="@font/arial_rounded"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical">

        <EditText

            android:id="@+id/emailET"
            android:layout_width="302dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_edittext"
            android:elevation="10dp"
            android:fontFamily="@font/arial_rounded"
           android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:hint="@string/email_adress"
            android:paddingStart="15dp"
            android:textSize="14sp" />


            <EditText
                android:id="@+id/passwordET"
                android:layout_width="302dp"
                android:elevation="10dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/arial_rounded"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:textSize="14dp"
                android:paddingLeft="15dp"
                android:visibility="visible"/>

    </LinearLayout>

<LinearLayout
    android:layout_weight="5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal">
<androidx.appcompat.widget.AppCompatCheckBox
    android:id="@+id/remeberMe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="50dp"
    style="@style/CustomCheckbox02"
    android:fontFamily="@font/arial_rounded"
    android:text="@string/remember_me"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/forgot_password"
     android:clickable="true"
     android:onClick="forgetPassword"
     android:fontFamily="@font/arial_rounded"
     android:textColor="@drawable/label_bg"
     android:focusable="true" />
</LinearLayout>
    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btn_id"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        app:spinning_bar_width="4dp"
        app:spinning_bar_color="#FFF"
        android:layout_marginHorizontal="28dp"
        android:fontFamily="@font/arial_rounded"
        android:text="Continue"
        android:onClick="login"
        android:background="@drawable/gradian_btn"
        android:textColor="#FFF"
        app:spinning_bar_padding="6dp" />
    <TextView
        android:layout_weight="5"
        android:layout_marginVertical="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_user_sign_up"
        android:onClick="signUp"
        android:clickable="true"
        android:textColor="@drawable/label_bg"
        android:fontFamily="@font/arial_rounded"
        android:focusable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginHorizontal="80dp"
        android:layout_gravity="center"
        android:text="@string/by_signing_up_you_indicate_that_you_read_and_agree_the_terms_of_service"
        android:textColor="@color/black"
        android:fontFamily="@font/arial_rounded"
        />
</LinearLayout>
</ScrollView>