<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_edittext"
    tools:context="dialog.AddMatchActionDialog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/team_flag"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/select_the_team"/>
        <Spinner
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/player"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/select_the_player"/>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/topPlayerImage"
            android:layout_gravity="center"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/ic_default_user"
            android:layout_marginHorizontal="10dp"
            />
        <Spinner
            android:id="@+id/player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="5"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ActionTypeImage"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/action_type"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/select_the_action_type"/>
        <Spinner
            android:id="@+id/action_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:weightSum="6"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:src="@drawable/chrono"
            android:layout_marginHorizontal="10dp"
            />
        <TextView
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/when_this_action_happend_in_minutes"/>
        <EditText
            android:id="@+id/minutes"
            android:layout_weight="3"
            android:gravity="center"
            android:layout_marginHorizontal="10dp"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="86’"/>
    </LinearLayout>
            <Button
                android:id="@+id/confirm"
                android:layout_marginTop="10dp"
                android:text="@string/confirm"
                android:gravity="center"
                android:background="@drawable/gradian_btn"
                android:textColor="#FFF"
                android:fontFamily="@font/arial_rounded"
                android:layout_marginHorizontal="30dp"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
