<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActionActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@drawable/close_effect"
            android:onClick="getBack" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/gark_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="2"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/match_actions"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/addPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_add_24"
            android:onClick="addMatchActions" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        android:weightSum="7">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/matchActionTeam1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="3" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/matchActionTeam2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layoutDirection="rtl"
            android:layout_weight="3">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
        <TextView
            android:id="@+id/not_yet"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="15dp"
            android:text="@string/none_yet"
            android:textColor="#FFF"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:fontFamily="@font/arial_rounded"
            android:layout_width="wrap_content"
            android:background="@drawable/text_holder"
            android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/arial_rounded"
        android:text="@string/set_global_match_information"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout

        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/winner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/arial_rounded"
            android:text="@string/winner"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/teamSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
        <Button
            android:id="@+id/update_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradian_btn"
            android:fontFamily="@font/arial_rounded"
            android:onClick="finish"
            android:layout_margin="20dp"
            android:text="@string/finish"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>


</LinearLayout>