<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddPostActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/transparent"
        android:weightSum="2">
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@drawable/close_effect"
            android:onClick="getBack" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="2"
            android:src="@drawable/gark_logo" />
</LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
<LinearLayout
    android:weightSum="10"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="5">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_baseline_add_a_photo_24"
            android:elevation="5dp"
            android:onClick="addImage" />

    </RelativeLayout>
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:orientation="vertical"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgViewFirstName"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_sports_soccer_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/imgViewFirstName">

                    <EditText
                        android:id="@+id/postTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionHint="yourhint"
                        android:dropDownHeight="match_parent"
                        android:fontFamily="@font/arial_rounded"
                        android:hint="@string/title"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textSize="15dp"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgViewEmail"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_short_text_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/imgViewEmail">

                    <EditText
                        android:id="@+id/postDescription"
                        android:layout_width="match_parent"
                        android:layout_height="119dp"
                        android:completionHint="yourhint"
                        android:dropDownHeight="match_parent"
                        android:fontFamily="@font/arial_rounded"
                        android:hint="@string/description"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:textSize="15dp"
                        android:visibility="visible" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradian_btn"
                android:fontFamily="@font/arial_rounded"
                android:text="@string/add_post"
                android:onClick="addPost"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>